<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">كيترنق</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="date">Date</string>
    <string name="next">NEXT</string>
    <string name="cart">Cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="select_pickup_branch">Select Pickup Branch</string>
    <string name="salmiya_branch_10">Salmiya-Branch 10</string>
    <string name="address">Address</string>
    <string name="enter_code">Enter Code</string>
    <string name="apply">Apply</string>
    <string name="knet">Knet</string>
    <string name="pay_now">PAY NOW</string>
    <string name="catering_service">Catering Service</string>
    <string name="set_up_time">Set-up-Time</string>
    <string name="requirements">Requirements</string>
    <string name="premium_indian_cfood_buffet">Premium Indian cFood Buffet</string>
    <string name="for_15_persons">For 15 Persons</string>
    <string name="chicken_tikka_simmered_in_a_siken_tomato_and_fenugreek_gravy">Chicken tikka simmered in a siken tomato and fenugreek gravy</string>
    <string name="_10_persons_with_option_to_add_count">10 Persons with Option to add Count</string>
    <string name="food">Food : </string>
    <string name="food_details_here">Food details here</string>
    <string name="service_and_presentaion">Service and presentaion:</string>
    <string name="_2_chefs_disposable_plates_tissue_boxes_and_water_bottel">2 Chefs, Disposable Plates, Tissue Boxes and Water Bottel</string>
    <string name="service_requests">Service Requests:</string>
    <string name="food_requests">Food Requests:</string>
    <string name="food_item_1">Food Item 1</string>
    <string name="request_female_service">Request Female Service</string>
    <string name="any_special_request">Any Special Request</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="loading">Loading...</string>
    <string name="register">Submit</string>
    <string name="skip_btn">Skip</string>
    <string name="arabic">عربى</string>
    <string name="offers">Offers </string>
    <string name="skip">Skip</string>
    <string name="english">English</string>
    <string name="internet_error">No Internet Connection!</string>
    <string name="server_error">Server error</string>
    <string name="country_text">Country</string>
    <string name="Home_text">Home</string>
    <string name="login_text">Login</string>
    <string name="my_order_text">My Orders</string>
    <string name="special_offers_text">Special Offers</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="email_text">Email</string>
    <string name="res_name">Restaurant Name </string>
    <string name="go_returant">Open Restaurant </string>
    <string name="password_text">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="donot_have_accout">Donot have an account ? </string>
    <string name="sign_up">Sign Up</string>
    <string name="login_titile_text"> Login </string>
    <string name="register_titile_text">Sign up</string>
    <string name="regiser_data_one">Your Registeration Info Here </string>
    <string name="regiser_data_two">  ( all fields are mandatory  ) </string>
    <string name="first_name_text">Name</string>
    <string name="last_name_text">Last Name  </string>
    <string name="phone_text">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="all_text">All</string>
    <string name="filter_text">Filter</string>
    <string name="booking">Booking</string>
    <string name="catering_text">Catring</string>
    <string name="delivery_text">Delivery</string>
    <string name="order_food_online">Order Food Online In </string>
    <string name="date_to_deliver">Date To Delivery</string>
    <string name="time_to_deliver">Time To Delivery</string>
    <string name="find_food">Find Food</string>
    <string name="select_deliver_date">Deliver Date</string>
    <string name="required_field">Required Data</string>
    <string name="password_error">Password are not Same </string>
    <string name="select_region">Select Region</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="enter_verification_code">4-Digit PIN has been sent to your phone number,\nenter it below to continue.</string>
    <string name="verify">Verify</string>
    <string name="profile">Profile</string>
    <string name="code">Code</string>
    <string name="book_dinning">Book A Dinning Table </string>
    <string name="number_of_tables">Number Of Tables </string>
    <string name="number_of_seats">Number Of Seats</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="ok1">fine</string>
    <string name="ok">Ok</string>
    <string name="send_code">Send Code</string>
    <string name="menu">Menu</string>
    <string name="about_text">About</string>
    <string name="review_text">Review</string>
    <string name="reset_done">Message Sent To Your Phone</string>
    <string name="serve_text">Serves :</string>
    <string name="serves">Serves : </string>
    <string name="setup_time">Set-up Time </string>
    <string name="max_time">Max Time  </string>
    <string name="pay_by">pay by Cash,KyNet </string>
    <string name="count">Count :</string>
    <string name="minimum_order_amount">Minimum Order Amount </string>
    <string name="working_hours_text"> Working Hours ( Today )</string>
    <string name="delivery_time">Delivery Time (Min)</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="payment">Payment</string>
    <string name="cuisines">Cuisines</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancelled">Cancelled</string>
    <string name="waiting">Waiting</string>
    <string name="time_out">Time Out Work Time</string>
    <string name="order_befor">Order Must Sent Before %1$s Hours of Close Minimum </string>
    <string name="max_addtions"> Maximum No of addition in %1$s is %2$s </string>
    <string name="future_date">You Must Select Future Date For Order Delivery </string>
    <string name="opened_text">Open</string>
    <string name="closed_text">Close</string>
    <string name="closed_text2">Closed in Selected Time</string>
    <string name="next_text">Next</string>
    <string name="check_out_text">Check Out</string>
    <string name="women_support_text">Women Service Required </string>
    <string name="per_person_cover">  Person with option to add count</string>
    <string name="other_request"> Special Request </string>
    <string name="free_extra_text">Free Extras</string>
    <string name="paid_extra_text">Paid Extras </string>
    <string name="add_to_cart">ADD To Cart</string>
    <string name="cart_text">Cart</string>
    <string name="meal_details_text">Meal Details </string>
    <string name="reset_password">Rest Password</string>
    <string name="women_support">Women Support </string>
    <string name="cart_empty">Cart Empty</string>
    <string name="send_order">Send Order</string>
    <string name="order_sent_successfully">Your Order Sent Successfully </string>
    <string name="cart_price">Total Price</string>
    <string name="enter_name">Enter Name  </string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_mobile">Enter Mobile  </string>
    <string name="enter_validation_code">Enter Validation Code</string>
    <string name="error_activiation_code"> Your Code Is InValid </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="send_oder_request">Send Order Request</string>
    <string name="read_more">Read more</string>
    <string name="rate_text">Rate Restaurant</string>
    <string name="rate">Rate</string>
    <string name="review">Review</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="comments_inquires">Comments / Enquiries</string>
    <string name="contact_us">Contact Us</string>
    <string name="try_again">Try Again There is a Problem </string>
    <string name="validation_code"> Code </string>
    <string name="enter_sms_code">Enter code you receive via sms </string>
    <string name="resend_code">Send Code </string>
    <string name="connection_error">Connection Error</string>
    <string name="order_sent">Booking Order Sent We Will Contact With You </string>
    <string name="order_not_sent">Booking Order Not Sent</string>
    <string name="send_order_message_1">1KD will be deducted for the booking</string>
    <string name="send_order_message_2">restaurant will contact you to confirm reservation</string>
    <string name="table_area">Table Area :</string>
    <string name="inside">Inside</string>
    <string name="out_side">Outside</string>
    <string name="smoking_area">Smoking Area </string>
    <string name="reset">Reset </string>
    <string name="required_time">Required Time </string>
    <string name="minute_text">minute</string>
    <string name="continue_text">Continue</string>
    <string name="error_response">Conection Error  </string>
    <string name="location_">Place</string>
    <string name="new_plcae">Enter New Location </string>
    <string name="old_place">Select Previous Location </string>
    <string name="error_in_payment">حدثت مشكلة أثناء الدفع حاول مجددا </string>
    <string name="cash_payment">Cash on Delivery</string>
    <string name="keyNeyPaymet">KNET </string>
    <string name="cash_and_knet">Cash,KNET</string>
    <string name="payment_method">Select Payment Method </string>
    <string name="activate_gps" translatable="false">Please Activate GPS </string>
    <string name="_delivery_place">Delivery Place</string>
    <string name="current_place">Current Place </string>
    <string name="from_map">From Map</string>
    <string name="data">Data</string>
    <string name="city">City</string>
    <string name="regions">Region</string>
    <string name="build_type">Build Type</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="gada">Gada</string>
    <string name="biuld">Build</string>
    <string name="building_floor">Building Floor</string>
    <string name="floor_number">Floor</string>
    <string name="more_info">More Info</string>
    <string name="sign">Sign in</string>
    <string name="new_to_catering">Or Sign in with</string>
    <string name="join_us">Join us</string>
    <string name="register_text" tools:ignore="DuplicateDefinition">By clicking the Register button, you agree to our</string>
    <string name="TermsOfUse">Terms of Use</string>
    <string name="Privacy">and our Privacy Policy</string>
    <string name="table_booking">Table booking</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="stationsBuffets">Stations &amp; Buffets</string>
    <string name="minNotice">Min Notice</string>
    <string name="minOrder">Min Order</string>
    <string name="delivery">Delivery</string>
    <string name="join_uss" translatable="false" tools:ignore="DuplicateDefinition">Need an account ?<font fgcolor='#F4401A'> join us</font></string>
    <string name="welcome">Welcome!</string>
    <string name="login_with_your_email_and_password_or_nsocial_media_details_to_continue">Login with your email and password or \nsocial media details to continue.</string>
    <string name="google">Google</string>
    <string name="apple">FaceBook</string>
    <string name="term_of_use">Term of Use</string>
    <string name="and_our">and our</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>