<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_color"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
             >

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="@color/white"-->
<!--                >-->

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_c" />
<!--            </androidx.cardview.widget.CardView>-->

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:fontFamily="@font/en"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/login_with_your_email_and_password_or_nsocial_media_details_to_continue"
                android:fontFamily="@font/en"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgetPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/en"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right"
                android:text="@string/forget_password" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/en"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/language_rounded_rectangle_with_border"
                android:text="@string/sign"
                android:textColor="@color/colorWhite" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/en"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:text="@string/new_to_catering" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_15sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_google"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_google"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:fontFamily="@font/en"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        />

                </LinearLayout>
                </androidx.cardview.widget.CardView>
                
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_40sdp"
                    android:background="#054170"
                    android:backgroundTint="#054170"
                    app:cardCornerRadius="@dimen/_20sdp"
                    >
                <LinearLayout
                    android:id="@+id/signupButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_facebook"
                        android:tint="@color/white"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/apple"
                        android:fontFamily="@font/en"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signUP"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/en"
                android:text="@string/join_uss"
                android:textSize="@dimen/_13sdp"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
