<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp">


<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="@color/white"-->
<!--                >-->

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_20sdp"
                    android:background="@drawable/logo_c" />
<!--            </androidx.cardview.widget.CardView>-->

            <androidx.appcompat.widget.AppCompatTextView
                android:fontFamily="@font/en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/join_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_30sdp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_text"
                    android:inputType="phone"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:maxLength="12"
                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp">
<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:passwordToggleEnabled="true"-->
<!--                    app:passwordToggleDrawable="@drawable/show_password_selector"-->
<!--                    app:passwordToggleTint="@color/colorAccent">-->

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:password="true"
                    />
<!--                </com.google.android.material.textfield.TextInputLayout>-->

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_conPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/en"
                    android:singleLine="true"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/en"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/register_text" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_termAndCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/en"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/term_of_use" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/en"
                    android:gravity="center"
                    android:text="@string/and_our" />

                <TextView
                    android:id="@+id/tv_privacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/en"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/privacy_policy" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/en"
                android:background="@drawable/language_rounded_rectangle_with_border"
                android:text="@string/register_titile_text"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
